gccida/c3/recog_18
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23492:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23493:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23496:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23521:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23537:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23538:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2l = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23546:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2l; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23569:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2l; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23578:35: error: use of undeclared identifier 'recog_data_0'
&& ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] == 54 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23579:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[1]->fld[0].rtwint == -1 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23593:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( x2l[1] != 1 ) 
     ~~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23600:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( x3q->fld[0].rtx, recog_data_0.operand[0]) ) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23602:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4s = ( rtx)x3q[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23610:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23611:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x5a = ( rtx)x4s[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23618:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = ( rtx)x5a[1]; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23618:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
recog_data_0.operand[2] = ( rtx)x5a[1]; 
                                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23635:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2l; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/insn-recog.c:23638:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( x1q->fld[0].rtx, recog_data_0.operand[1]) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_18/src/obj/insn-recog.o] Error 1
